--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file=.env src/server.ts"
+    "dev": "tsx watch --env-file=.env src/server.ts",
+    "build": "tsup-node"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "@biomejs/biome": "^1.9.4",
     "@types/node": "^22.13.4",
     "drizzle-kit": "^0.30.4",
+    "tsup": "^8.3.6",
     "tsx": "^4.19.3",
     "typescript": "^5.7.3"
   }
